--- a/AFZV31_HFT_2023241.Endpoint/AFZV31_HFT_2023241.Endpoint.csproj
+++ b/AFZV31_HFT_2023241.Endpoint/AFZV31_HFT_2023241.Endpoint.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AFZV31_HFT_2023241.Logic\AFZV31_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\AFZV31_HFT_2023241.Models\AFZV31_HFT_2023241.Models.csproj" />
     <ProjectReference Include="..\AFZV31_HFT_2023241.Repository\AFZV31_HFT_2023241.Repository.csproj" />
