--- a/AFZV31_HFT_2023241.Repository/AFZV31_HFT_2023241.Repository.csproj
+++ b/AFZV31_HFT_2023241.Repository/AFZV31_HFT_2023241.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,5 +7,19 @@
   <ItemGroup>
     <ProjectReference Include="..\AFZV31_HFT_2023241.Models\AFZV31_HFT_2023241.Models.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<Content Include="annuals.mdf">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.14" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
 
 </Project>
