--- a/Codefrist/Codefrist.csproj
+++ b/Codefrist/Codefrist.csproj
@@ -1,26 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-	<ItemGroup>
-<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
+  <ItemGroup>
+    <Compile Remove="Program.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Program.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
 <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.14" />
 <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
 <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14">
 <PrivateAssets>all</PrivateAssets>
 <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 </PackageReference>
-</ItemGroup>	
-
-  <ItemGroup>
-    <None Remove="annuals.mdf" />
+	
   </ItemGroup>
 
-  <ItemGroup>
-    <Content Include="annuals.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
 </Project>
