corrected navigation properties

--- a/AFZV31_HFT_2023241.Models/AFZV31_HFT_2023241.Models.csproj
+++ b/AFZV31_HFT_2023241.Models/AFZV31_HFT_2023241.Models.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -11,16 +11,6 @@
 <PrivateAssets>all</PrivateAssets>
 <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 </PackageReference>
-</ItemGroup>	
-
-  <ItemGroup>
-    <None Remove="annuals.mdf" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="annuals.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+</ItemGroup>
 
 </Project>
