--- a/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
+++ b/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
@@ -16,7 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AFZV31_HFT_2023241.Endpoint\AFZV31_HFT_2023241.Endpoint.csproj" />
+    <ProjectReference Include="..\AFZV31_HFT_2023241.Logic\AFZV31_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\AFZV31_HFT_2023241.Models\AFZV31_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\AFZV31_HFT_2023241.Repository\AFZV31_HFT_2023241.Repository.csproj" />
+    <ProjectReference Include="..\AFZV31_HFT_2023241.Test\AFZV31_HFT_2023241.Test.csproj" />
   </ItemGroup>
 
 </Project>
