--- a/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
+++ b/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleMenu-simple" Version="2.6.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
