--- a/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
+++ b/AFZV31_HFT_2023241/AFZV31_HFT_2023241.Client.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConsoleMenu-simple" Version="2.6.1" />
+   
+	  <PackageReference Include="ConsoleMenu-simple" Version="2.4.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.14" />
@@ -15,13 +16,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="NEST" Version="7.17.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AFZV31_HFT_2023241.Logic\AFZV31_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\AFZV31_HFT_2023241.Models\AFZV31_HFT_2023241.Models.csproj" />
-    <ProjectReference Include="..\AFZV31_HFT_2023241.Repository\AFZV31_HFT_2023241.Repository.csproj" />
-    <ProjectReference Include="..\AFZV31_HFT_2023241.Test\AFZV31_HFT_2023241.Test.csproj" />
   </ItemGroup>
 
 </Project>
